--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -122,6 +122,7 @@
         <file>onboard/syncs_types/backups/SelectFoldersPageForm.ui.qml</file>
         <file>syncs/qmldir</file>
         <file>syncs/SyncsDialog.qml</file>
+        <file>syncs/SyncsStrings.qml</file>
         <file>syncs/ChooseSyncFolder.qml</file>
         <file>syncs/FullSyncPage.qml</file>
         <file>syncs/FullSyncPageForm.ui.qml</file>
