--- a/src/MEGASync/stalled_issues/gui/macx/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/macx/StalledIssuesDialog.ui
@@ -1009,7 +1009,7 @@ color: #2C5BEB;
                 <enum>QFrame::Raised</enum>
                </property>
                <property name="title" stdset="0">
-                <string>All issues:</string>
+                <string/>
                </property>
                <property name="filterCriterion" stdset="0">
                 <number>0</number>
@@ -1028,7 +1028,7 @@ color: #2C5BEB;
                 <enum>QFrame::Raised</enum>
                </property>
                <property name="title" stdset="0">
-                <string>Name conflicts:</string>
+                <string/>
                </property>
                <property name="filterCriterion" stdset="0">
                 <number>1</number>
@@ -1047,7 +1047,7 @@ color: #2C5BEB;
                 <enum>QFrame::Raised</enum>
                </property>
                <property name="title" stdset="0">
-                <string>Item type conflicts:</string>
+                <string/>
                </property>
                <property name="iconPrefix" stdset="0">
                 <string notr="true">folder-small</string>
@@ -1066,7 +1066,7 @@ color: #2C5BEB;
                 <enum>QFrame::Raised</enum>
                </property>
                <property name="title" stdset="0">
-                <string>Other:</string>
+                <string/>
                </property>
                <property name="iconPrefix" stdset="0">
                 <string notr="true">more-circle-small</string>
@@ -1459,6 +1459,6 @@ color: grey;
  </customwidgets>
  <resources>
   <include location="../../../gui/Resources_macx.qrc"/>
-   </resources>
+ </resources>
  <connections/>
 </ui>
