--- a/src/MEGASync/stalled_issues/gui/macx/StalledIssueHeader.ui
+++ b/src/MEGASync/stalled_issues/gui/macx/StalledIssueHeader.ui
@@ -207,6 +207,13 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="styleSheet">
+            <string notr="true">QToolTip
+{
+	color:#FAFAFA;
+	background-color:#333333
+}</string>
+           </property>
            <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
             <property name="spacing">
              <number>3</number>
@@ -299,6 +306,13 @@
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QToolTip
+{
+	color:#FAFAFA;
+	background-color:#333333
+}</string>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
             <property name="spacing">
