--- a/src/MEGASync/gui/macx/BugReportDialog.ui
+++ b/src/MEGASync/gui/macx/BugReportDialog.ui
@@ -217,6 +217,18 @@
       </item>
       <item>
        <widget class="QPushButton" name="bSubmit">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>32</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>32</height>
+         </size>
+        </property>
         <property name="text">
          <string>Submit</string>
         </property>
