--- a/src/MEGASync/gui/macx/ProxySettings.ui
+++ b/src/MEGASync/gui/macx/ProxySettings.ui
@@ -549,6 +549,18 @@ margin-left: 20px;
       </item>
       <item>
        <widget class="QPushButton" name="bUpdate">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>32</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>32</height>
+         </size>
+        </property>
         <property name="text">
          <string>Update</string>
         </property>
