--- a/src/MEGASync/syncs/gui/Backups/macx/AddBackupDialog.ui
+++ b/src/MEGASync/syncs/gui/Backups/macx/AddBackupDialog.ui
@@ -126,6 +126,18 @@ margin-right: 29px;
         </property>
         <item row="0" column="2">
          <widget class="QPushButton" name="changeButton">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>32</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>32</height>
+           </size>
+          </property>
           <property name="text">
            <string>Choose</string>
           </property>
@@ -221,6 +233,18 @@ margin-right: 32px;
           <property name="enabled">
            <bool>false</bool>
           </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>32</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>32</height>
+           </size>
+          </property>
           <property name="text">
            <string>Add exclusions</string>
           </property>
@@ -244,6 +268,18 @@ margin-right: 32px;
         </item>
         <item>
          <widget class="QPushButton" name="cancelButton">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>32</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>32</height>
+           </size>
+          </property>
           <property name="text">
            <string>Cancel</string>
           </property>
@@ -253,6 +289,18 @@ margin-right: 32px;
          <widget class="QPushButton" name="addButton">
           <property name="enabled">
            <bool>false</bool>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>32</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>32</height>
+           </size>
           </property>
           <property name="text">
            <string>Add</string>
