Add steps to backups window and update onboarding steps code
Also, fix description color in resume page of the onboarding window in alignment with designs

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -153,5 +153,6 @@
         <file>backups/ResumePageForm.ui.qml</file>
         <file>backups/ResumePage.qml</file>
         <file>backups/BackupsPage.qml</file>
+        <file>backups/StepPanel.qml</file>
     </qresource>
 </RCC>
