--- a/src/MEGASync/gui/macx/ProxySettings.ui
+++ b/src/MEGASync/gui/macx/ProxySettings.ui
@@ -539,6 +539,18 @@ margin-left: 20px;
       </item>
       <item>
        <widget class="QPushButton" name="bCancel">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>32</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>32</height>
+         </size>
+        </property>
         <property name="text">
          <string>Cancel</string>
         </property>
