SNC-4307 : QString arg in color theme

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -131,5 +131,6 @@
         <file>common/FontStyles.qml</file>
         <file>common/themes/light/Colors.qml</file>
         <file>common/themes/dark/Colors.qml</file>
+        <file>common/Style.js</file>
     </qresource>
 </RCC>
