SNC-4307 : Update ColorTheme & CategoryTheme to be used as singletons.

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -131,7 +131,7 @@
         <file>common/FontStyles.qml</file>
         <file>common/themes/light/Colors.qml</file>
         <file>common/themes/dark/Colors.qml</file>
-        <file>common/ColorsTheme.qml</file>
+        <file>common/ColorTheme.qml</file>
         <file>common/themes/dark/Category.qml</file>
         <file>common/themes/light/Category.qml</file>
         <file>common/CategoryTheme.qml</file>
