--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -112,8 +112,13 @@
         <file>onboard/syncs_types/SyncsHorizontalButton.qml</file>
         <file>onboard/syncs_types/SyncsType.qml</file>
         <file>onboard/syncs_types/SyncsVerticalButton.qml</file>
-        <file>onboard/syncs_types/BackupsPage.qml</file>
         <file>onboard/syncs_types/StepPanel.qml</file>
+        <file>onboard/syncs_types/backups/qmldir</file>
+        <file>onboard/syncs_types/backups/BackupsPage.qml</file>
+        <file>onboard/syncs_types/backups/ConfirmFoldersPage.qml</file>
+        <file>onboard/syncs_types/backups/ConfirmFoldersPageForm.ui.qml</file>
+        <file>onboard/syncs_types/backups/SelectFoldersPage.qml</file>
+        <file>onboard/syncs_types/backups/SelectFoldersPageForm.ui.qml</file>
         <file>onboard/syncs_types/syncs/qmldir</file>
         <file>onboard/syncs_types/syncs/ChooseSyncFolder.qml</file>
         <file>onboard/syncs_types/syncs/FullSyncPage.qml</file>
