--- a/src/MEGASync/stalled_issues/gui/win/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/win/StalledIssuesDialog.ui
@@ -516,6 +516,9 @@ automatically</string>
                      <property name="alignment">
                       <set>Qt::AlignCenter</set>
                      </property>
+                     <property name="wordWrap">
+                      <bool>true</bool>
+                     </property>
                     </widget>
                    </item>
                   </layout>
