SNC-4405: Remove SVG design token and update DTI to only include color implementation.

--- a/src/DesignTokensImporter/src/Resources.qrc
+++ b/src/DesignTokensImporter/src/Resources.qrc
@@ -1,6 +1,1 @@
-<RCC>
-    <qresource prefix="/">
-        <file>StyleSheet/Light/ApplicationStyles.json</file>
-        <file>StyleSheet/Dark/ApplicationStyles.json</file>
-    </qresource>
-</RCC>
+<RCC/>
