--- a/src/MEGASync/gui/macx/RemoteItemUi.ui
+++ b/src/MEGASync/gui/macx/RemoteItemUi.ui
@@ -68,7 +68,7 @@
          </size>
         </property>
         <property name="text">
-         <string/>
+         <string notr="true"/>
         </property>
        </widget>
       </item>
