--- a/src/MEGASync/gui/linux/SettingsDialog.ui
+++ b/src/MEGASync/gui/linux/SettingsDialog.ui
@@ -168,6 +168,11 @@ margin-top: 4px;
        <height>80</height>
       </size>
      </property>
+     <property name="styleSheet">
+      <string notr="true">*{
+/*token_background-color: {{surface-1}};*/
+}</string>
+     </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <property name="spacing">
        <number>0</number>
@@ -579,6 +584,11 @@ margin-top: 4px;
    </item>
    <item>
     <widget class="QStackedWidget" name="wStack">
+     <property name="styleSheet">
+      <string notr="true">*{
+/*token_background-color: {{surface-1}};*/
+}</string>
+     </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
@@ -2096,6 +2106,11 @@ min-height: 72px;
    </item>
    <item alignment="Qt::AlignBottom">
     <widget class="QWidget" name="wBottom" native="true">
+     <property name="styleSheet">
+      <string notr="true">*{
+/*token_background-color: {{surface-1}};*/
+}</string>
+     </property>
      <layout class="QHBoxLayout" name="horizontalLayout_18">
       <property name="leftMargin">
        <number>8</number>
