--- a/src/MEGASync/gui/Resources_macx.qrc
+++ b/src/MEGASync/gui/Resources_macx.qrc
@@ -1262,5 +1262,8 @@
         <file>images/copy@2x.png</file>
         <file>images/copy@3x.png</file>
         <file>images/clock_ico@3x.png</file>
+        <file>images/StalledIssues/rotate-ccw.png</file>
+        <file>images/StalledIssues/rotate-ccw@2x.png</file>
+        <file>images/StalledIssues/rotate-ccw@3x.png</file>
     </qresource>
 </RCC>
