--- a/src/MEGASync/stalled_issues/gui/macx/StalledIssueActionTitle.ui
+++ b/src/MEGASync/stalled_issues/gui/macx/StalledIssueActionTitle.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>154</width>
+    <width>212</width>
     <height>79</height>
    </rect>
   </property>
@@ -44,7 +44,7 @@
 
 #backgroundWidget[discarded=true][disable_background=false]
 {
-	background-color: #FCFCFC;
+	background-color: #4DF5F5F5;
 }
 
 #extraInfoContainer QLabel
@@ -139,7 +139,7 @@ QPushButton[main=true]
        <number>0</number>
       </property>
       <property name="rightMargin">
-       <number>0</number>
+       <number>4</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
@@ -203,6 +203,12 @@ QPushButton[main=true]
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="cursor">
+               <cursorShape>ArrowCursor</cursorShape>
+              </property>
+              <property name="styleSheet">
+               <string notr="true"/>
+              </property>
               <layout class="QHBoxLayout" name="horizontalLayout_2">
                <property name="spacing">
                 <number>8</number>
@@ -264,6 +270,34 @@ QPushButton[main=true]
                  </property>
                 </widget>
                </item>
+               <item>
+                <widget class="QLabel" name="hoverIcon">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>16</width>
+                   <height>16</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>16</width>
+                   <height>16</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string/>
+                 </property>
+                 <property name="pixmap">
+                  <pixmap resource="../../../gui/Resources_macx.qrc">:/images/StalledIssues/ic-open-outside.png</pixmap>
+                 </property>
+                </widget>
+               </item>
               </layout>
              </widget>
             </item>
@@ -277,7 +311,7 @@ QPushButton[main=true]
               </property>
               <layout class="QHBoxLayout" name="messageLayout">
                <property name="spacing">
-                <number>0</number>
+                <number>5</number>
                </property>
                <property name="leftMargin">
                 <number>0</number>
