Adapt UIs to Win/Linux from macOS

--- a/src/MEGASync/gui/Resources_linux.qrc
+++ b/src/MEGASync/gui/Resources_linux.qrc
@@ -1495,5 +1495,8 @@
         <file>images/copy@3x.png</file>
         <file>images/copy.png</file>
         <file>images/copy@2x.png</file>
+        <file>images/StalledIssues/rotate-ccw.png</file>
+        <file>images/StalledIssues/rotate-ccw@2x.png</file>
+        <file>images/StalledIssues/rotate-ccw@3x.png</file>
     </qresource>
 </RCC>
