--- a/src/MEGASync/gui/Resources_win.qrc
+++ b/src/MEGASync/gui/Resources_win.qrc
@@ -1518,5 +1518,8 @@
         <file>images/copy.png</file>
         <file>images/copy@2x.png</file>
         <file>images/copy@3x.png</file>
+        <file>images/StalledIssues/rotate-ccw.png</file>
+        <file>images/StalledIssues/rotate-ccw@2x.png</file>
+        <file>images/StalledIssues/rotate-ccw@3x.png</file>
     </qresource>
 </RCC>
