--- a/src/MEGASync/stalled_issues/gui/win/StalledIssueActionTitle.ui
+++ b/src/MEGASync/stalled_issues/gui/win/StalledIssueActionTitle.ui
@@ -38,7 +38,7 @@
 
 #backgroundWidget[discarded=true][disable_background=false]
 {
-	background-color: #FCFCFC;
+	background-color: #4DF5F5F5;
 }
 
 #extraInfoContainer QLabel
@@ -134,7 +134,7 @@ QPushButton[main=true]
        <number>0</number>
       </property>
       <property name="rightMargin">
-       <number>0</number>
+       <number>4</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
@@ -262,6 +262,34 @@ QPushButton[main=true]
                  </property>
                 </widget>
                </item>
+               <item>
+                <widget class="QLabel" name="hoverIcon">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>16</width>
+                   <height>16</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>16</width>
+                   <height>16</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string notr="true"/>
+                 </property>
+                 <property name="pixmap">
+                  <pixmap resource="../../../gui/Resources_win.qrc">:/images/StalledIssues/ic-open-outside.png</pixmap>
+                 </property>
+                </widget>
+               </item>
               </layout>
              </widget>
             </item>
@@ -275,7 +303,7 @@ QPushButton[main=true]
               </property>
               <layout class="QHBoxLayout" name="messageLayout">
                <property name="spacing">
-                <number>0</number>
+                <number>5</number>
                </property>
                <property name="leftMargin">
                 <number>0</number>
@@ -372,6 +400,8 @@ QPushButton[main=true]
    <header>WordWrapLabel.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../../gui/Resources_win.qrc"/>
+ </resources>
  <connections/>
 </ui>
