--- a/src/MEGASync/gui/Resources_win.qrc
+++ b/src/MEGASync/gui/Resources_win.qrc
@@ -1518,5 +1518,6 @@
         <file>images/copy.png</file>
         <file>images/copy@2x.png</file>
         <file>images/copy@3x.png</file>
+        <file>images/folder.svg</file>
     </qresource>
 </RCC>
